Creating website home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,19 @@
   margin: 0;
   border: 0;
   font-size: 12px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica', Arial, sans-serif;
   color: #b2b2b2;
 }
 body {
-  background: linear-gradient(45deg, #190061, #0c0032);
+  background-color: black;
+}
+body .noscroll {
+  overflow: hidden;
+  min-width: 100%;
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -17,7 +25,7 @@ body {
   font-style: italic;
   padding: .1% 0 .1% 0;
   text-align: left;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
 }
 .header h1 {
   font-size: 3.5rem;
