--- a/css/stylesmain.css
+++ b/css/stylesmain.css
@@ -16,7 +16,7 @@ body {
   text-align: center;
   font-size: 50px;
   color: white;
-  height: 150px;
+  height: 140px;
   padding: 30px;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -41,14 +41,20 @@ body {
   min-width: 80px;
   border-left: .3rem solid #0d3452;
   border-radius: 3px;
-  margin-right: 10px;
+  margin-right: 7px;
 }
 .navtext {
   color: white;
+  font-weight: bold;
   font-size: 15px;
   font-family:'Arial', Courier, monospace, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
   padding: 10px 5px 5px 5px;
+}
+.navitem:hover {
+  background-color: #0d3452;
+  border-left: .3rem solid #004b82;
+  color: #d3d5db;
 }
 
 /* The grid container */
@@ -93,7 +99,7 @@ body {
   background-color: #0d3452;
   padding: 10px;
   text-align: center;
-  height: 100px;
+  height: 70px;
   margin-top: 10px;
 }
 
@@ -108,9 +114,16 @@ body {
       'nav footer footer footer footer footer';
   }
   .navitem {
-    margin: 5px;
+    margin: 3px 0px 3px 3px;
   }
   .header {
     font-size: 25px;
+  }
+  .grid-container {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .middle, .right {
+    margin-top: 10px;
   }
 }
