--- a/css/stylesrecruiting.css
+++ b/css/stylesrecruiting.css
@@ -74,7 +74,7 @@ body {
 .body {
   background-color: #0d3452;
   padding: 10px;
-  height: 500px; /* Should be removed. Only for demonstration */
+  min-height: 500px; /* Should be removed. Only for demonstration */
 }
 
 /* Style the body column */
