--- a/css/stylesrecruiting.css
+++ b/css/stylesrecruiting.css
@@ -92,6 +92,19 @@ body {
   margin-top: 10px;
 }
 
+#tableid {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+#tableid thead {
+  background-color:#202024;
+}
+
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 1100px) {
   .grid-container  {
