--- a/css/stylesrecruiting.css
+++ b/css/stylesrecruiting.css
@@ -102,6 +102,7 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   padding: 10px;
   background-color:#153b75;
+  overflow: scroll;
 }
 #tableid thead {
   background-color:#17458a;
@@ -115,6 +116,16 @@ body {
 }
 #tableid tr:nth-child(even){
   background-color:#17458a;
+}
+#tableid tr:nth-child(odd):hover{
+  background-color: #436599;
+  color: white;
+  padding: 3px 12px 3px 12px;
+}
+#tableid tr:nth-child(even):hover{
+  background-color: #365d99;
+  color: white;
+  padding: 3px 12px 3px 12px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
